--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
     <title>LazyNinja</title>
+    <meta name="title" content="LazyNinja">
+    <meta name="description" content="A website that you can contact LazyNinja LLC to get your own personal website for your business or whatever reason you want to have a perfect website. You can also see other businesses that have worked with LazyNinja.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.LazyNinja.co">
+    <meta property="og:title" content="LazyNinja">
+    <meta property="og:description" content="A website that you can contact LazyNinja LLC to get your own personal website for your business or whatever reason you want to have a perfect website. You can also see other businesses that have worked with LazyNinja.">
+    <meta property="og:image" content="https://lazyninja.co/pics/95624b19-44de-40fd-b2cd-33af192bdbba.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="lazyninjalogo">
+    <meta name="twitter:url" content="https://www.lazyninja.co">
+    <meta name="twitter:title" content="LazyNinja">
+    <meta name="twitter:description" content="A website that you can contact LazyNinja LLC to get your own personal website for your business or whatever reason you want to have a perfect website. You can also see other businesses that have worked with LazyNinja.">
+    <meta name="twitter:image" content="https://lazyninja.co/pics/95624b19-44de-40fd-b2cd-33af192bdbba.png">
+
+    <!-- Other helpful tags -->
+    <meta name="robots" content="index, follow">
   </head>
 
   <body>
